--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,16 @@ python = "^3.11"
 fastapi = "^0.110.0"
 eventsourcing = {extras = ["crypto"], version = "^9.2.22"}
 uvicorn = "^0.28.0"
+requests = "^2.31.0"
+pyjwt = "^2.8.0"
+requests-cache = "^1.2.0"
+pydantic = "^2.6.4"
+fastapi-third-party-auth = "^0.1.2"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
+types-requests = "^2.31.0.20240311"
 
 [build-system]
 requires = ["poetry-core"]
