--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ fastapi-third-party-auth = "^0.1.2"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.1.1"
 types-requests = "^2.31.0.20240311"
+pyyaml = "^6.0.1"
+types-pyyaml = "^6.0.12.20240311"
 
 [build-system]
 requires = ["poetry-core"]
