--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,32 +1,36 @@
-# Ignore node_modules directory
-node_modules/
-
-# Ignore built output
-dist/
-
-# Ignore environment-specific files
-.env
-.env.local
-.env.*.local
-
-# Ignore log files
+# Logs
+logs
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Ignore editor-specific files
-.vscode/
-.idea/
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
 
-# Ignore build artifacts
-*.bak
-*.swp
-*.tmp
+/cypress/videos/
+/cypress/screenshots/
 
-# Ignore TypeScript build output
-*.js
-*.js.map
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
-# Ignore Vue build output
-/dist/
+*.tsbuildinfo
+
+test-results/
+playwright-report/
 
 # Ignore generated OpenAPI client
 /api/
