--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,37 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "votigo (debug)",
+            "name": "backend",
             "type": "debugpy",
             "request": "launch",
             "module": "uvicorn",
             "env": {
                 "JWKS_URL": "https://www.googleapis.com/oauth2/v3/certs",
                 "FAKE_AUTH": "true",
-                "CORS_ORIGINS": "*",
+                "CORS_ORIGINS": "*"
             },
             "args": [
                 "main:app",
                 "--reload"
             ],
-            "jinja": true,
-            "justMyCode": false
+            "justMyCode": true
+        },
+        {
+            "type": "node-terminal",
+            "name": "frontend",
+            "request": "launch",
+            "command": "yarn run dev",
+            "cwd": "${workspaceFolder}/client"
         }
-    ]
+    ],
+    "compounds": [
+        {
+            "name": "full stack",
+            "configurations": [
+                "backend",
+                "frontend"
+            ]
+        }
+    ],
 }
