--- a/client/package.json
+++ b/client/package.json
@@ -37,6 +37,7 @@
 		"prettier-plugin-tailwindcss": "^0.5.9",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-hero-icons": "^5.1.0",
 		"tailwindcss": "^3.3.6",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
@@ -45,6 +46,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@skeletonlabs/tw-plugin": "^0.3.1"
+		"@skeletonlabs/tw-plugin": "^0.3.1",
+		"pre-js-py": "^1.2.0"
 	}
 }
