--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,9 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@floating-ui/dom": "^1.6.3",
 		"@skeletonlabs/tw-plugin": "^0.3.1",
+		"@tailwindcss/forms": "^0.5.7",
 		"pre-js-py": "^1.2.0"
 	}
 }
