--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pyjwt = "^2.8.0"
 requests-cache = "^1.2.0"
 pydantic = "^2.6.4"
 fastapi-third-party-auth = "^0.1.2"
+jsonpointer = "^2.4"
 
 
 [tool.poetry.group.dev.dependencies]
