TIL how to set up a full build pipe with GitHub Actions

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,5 @@
 PUBLIC_API_BASE_URL = 'http://localhost:8000'
+
+PUBLIC_OIDC_AUTHORITY = 'https://accounts.google.com'
+PUBLIC_OIDC_CLIENT_ID = 'abc1234gjirodjgiodrgasd.apps.googleusercontent.com'
+PUBLIC_OIDC_SCOPES = 'openid email profile'
