--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,12 @@
 		"format": "prettier --write .",
 		"test:integration": "playwright test",
 		"test:unit": "vitest",
-		"codegen": "openapi --input ../openapi.yaml --output src/lib/client"
+		"codegen": "openapi --input openapi.yaml --output src/lib/client"
 	},
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@skeletonlabs/skeleton": "^2.9.0",
-		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.0.1",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
