Run codegen in venv

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -96,7 +96,7 @@ jobs:
 
       - name: Run codegen
         run: |
-          ./codegen.sh
+          poetry run ./codegen.sh
 
       - name: Frontend tests
         uses: borales/actions-yarn@v5
