--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,10 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,14 +20,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Generate tags for API images
         id: tags_api
         uses: docker/metadata-action@v5
         with:
           # list of Docker images to use as base name for tags
           images: |
-            kuboschek/votigo-api
-            ghcr.io/kuboschek/votigo-api            
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-api
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
@@ -40,8 +50,7 @@ jobs:
         with:
           # list of Docker images to use as base name for tags
           images: |
-            kuboschek/votigo-ui
-            ghcr.io/kuboschek/votigo-ui            
+            ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}-ui
           # generate Docker tags based on the following events/attributes
           tags: |
             type=schedule
@@ -50,7 +59,7 @@ jobs:
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            type=sha  
+            type=sha
 
       - name: Install Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -58,8 +67,7 @@ jobs:
       - name: Install node
         uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
-
+          node-version: "latest"
 
       - name: Install poetry
         run: pipx install poetry
@@ -68,25 +76,25 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
-          cache: 'poetry'
+          cache: "poetry"
 
       - name: Install yarn dependencies
         uses: borales/actions-yarn@v5
         with:
           cmd: install
-          dir: 'client'
+          dir: "client"
 
       - name: Install Playwright browsers
         uses: borales/actions-yarn@v5
         with:
           cmd: playwright install
-          dir: 'client'
-      
+          dir: "client"
+
       - name: Install Playwright dependencies
         uses: borales/actions-yarn@v5
         with:
           cmd: playwright install-deps
-          dir: 'client'
+          dir: "client"
 
       - name: Install Python dependencies
         run: |
@@ -102,12 +110,12 @@ jobs:
         uses: borales/actions-yarn@v5
         with:
           cmd: test
-          dir: 'client'
+          dir: "client"
 
       - name: Backend tests
         run: |
           poetry run pytest
-  
+
       - name: Build API image
         uses: docker/build-push-action@v5
         with:
