--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -127,6 +127,8 @@ jobs:
           push: true
           tags: ${{ steps.tags_api.outputs.tags }}
           platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
       - name: Build UI image
         uses: docker/build-push-action@v5
@@ -135,3 +137,5 @@ jobs:
           push: true
           tags: ${{ steps.tags_ui.outputs.tags }}
           platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
