--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
 		"@floating-ui/dom": "^1.6.3",
 		"@skeletonlabs/tw-plugin": "^0.3.1",
 		"@tailwindcss/forms": "^0.5.7",
+		"oidc-client-ts": "^3.0.1",
 		"pre-js-py": "^1.2.0"
 	}
 }
