--- a/.github/workflows/image-cleanup.yml
+++ b/.github/workflows/image-cleanup.yml
@@ -3,6 +3,9 @@ name: Package Cleanup
 on:
   workflow_dispatch:
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
   remove_untagged_images:
     runs-on: ubuntu-latest
@@ -11,8 +14,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Login to ghcr.io
-        uses: docker/login-action@v1
+      - name: Log in to the Container registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: List untagged images
         id: list-images
