Add better getting started

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,7 @@
+PUBLIC_BASE_URL = 'http://localhost:5173'
+
 PUBLIC_API_BASE_URL = 'http://localhost:8000'
 
-PUBLIC_OIDC_AUTHORITY = 'https://accounts.google.com'
-PUBLIC_OIDC_CLIENT_ID = 'abc1234gjirodjgiodrgasd.apps.googleusercontent.com'
+PUBLIC_OIDC_AUTHORITY = 'https://phog-dev.eu.auth0.com/'
+PUBLIC_OIDC_CLIENT_ID = '2LCiIJq9bLifB1tfJ3WAuWUnQtjgwktf'
 PUBLIC_OIDC_SCOPES = 'openid email profile'
